Adding api model and basic store for ingredients
